# rustaml

./: .gitignore  Cargo.toml  README.md  a.out  build.rs  expr.rs  out  std.c  test_out
debug_with_context/: Cargo.toml
debug_with_context/debug_with_context_macros/: Cargo.toml
debug_with_context/debug_with_context_macros/src/: lib.rs
debug_with_context/src/: lib.rs
debug_with_context/test_crate/: Cargo.toml
debug_with_context/test_crate/src/: main.rs
extra/benchmarks/: benchmarks.csv  benchmarks.md  build-time-benchmarks.md  graphs.py
src/: ast.rs  ast_dot.rs  cache.rs  check.rs  compiler.rs  compiler_match.rs  compiler_utils.rs  debug.rs  debuginfo.rs  gc.rs  intepreter.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  mangle.rs  print_error.rs  print_warnings.rs  profiler.rs  repl.rs  rustaml.rs  string_intern.rs  type_inference.rs  type_inference_debug.rs  types.rs  types_debug.rs
src/compiler/: cast.rs  compile_match.rs  compiler.rs  compiler_utils.rs  debuginfo.rs  internal_monomorphized.rs  linker.rs  mod.rs
src/interpreter/: ffi.rs  gc.rs  interpreter.rs  jit.rs  mod.rs
std/: format.c  gen_std.py  list.c  prelude.h  print.c  random.c  regex.c  runtime.c  str.c  utf8.c
tests/: adt.rml  big_fibo.rml  big_fibo_opti.rml  bool.rml  c.rml  cpp_ffi.cpp  errors.rml  exceptions.rml  ffi.rml  fib_list.rml  file.rml  float.rml  format.rml  func.rml  gen_big_file.py  gen_cpp_so.sh  generics.rml  import.rml  import_loop1.rml  import_loop2.rml  imported.rml  int.rml  lexer_error.rml  list.rml  list_simple.rml  match.rml  panic.rml  parser_error.rml  print.rml  rand.rml  regex.rml  run_all.py  simd.rml  str.rml  test_gc_list.rml  test_gc_str.rml  test_gc_str_big.rml  test_if.rml  test_rand.py  types_error.rml  (+2 more)
tests/output_tests/: c.compiler.txt  c.interpreter.txt  ffi.compiler.txt  ffi.interpreter.txt  file.interpreter.txt  format.compiler.txt  format.interpreter.txt  func.compiler.txt  func.interpreter.txt  int.compiler.txt  list.interpreter.txt  list_simple.compiler.txt  list_simple.interpreter.txt  match.compiler.txt  match.interpreter.txt  print.compiler.txt  print.interpreter.txt  rand.compiler.txt  rand.interpreter.txt  simd.compiler.txt  simd.interpreter.txt  str.compiler.txt  unary.compiler.txt
