[package]
name = "rustaml"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.39", features = ["derive"] }
cfg-if = "1.0.1"
enum-tags = "0.1.0"
enum-tags-traits = "0.1.0"
levenshtein = "1.0.5"
rustc-hash = "2.1.1"
debug_with_context = "0.1.2"

inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true } # set LLVM_SYS_181_PREFIX to a only static installation to make it build statically
pathbuf = { version = "1.0.0", optional = true}
human-panic = {version = "2.0.3", optional = true }
rustyline = {version = "16.0.0", optional = true }


[profile.release]
lto = "fat"
panic = "abort"
strip = "debuginfo"
#debug = "full"

[features]
native = ["dep:inkwell", "dep:pathbuf"]
repl = ["dep:rustyline"]
human-panic = ["dep:human-panic"]
gc-test-print = []
gc-test-collect = []
