[package]
name = "rustaml"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.5.39", features = ["derive"] }
cfg-if = "1.0.1"
enum-tags = "0.1.0"
enum-tags-traits = "0.1.0"
levenshtein = "1.0.5"
rustc-hash = "2.1.1"
debug_with_context = "0.1.5"
pathbuf = { version = "1.0.0"}
rand = "0.9.2"
libloading = "0.9.0"
mangler = "0.2.0"
const_format = { version = "0.2.35", features = ["fmt"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
macro_static_str_to_char = "0.1.0"
nohash = "0.2.0"
smallvec = { version = "1.15.1", features = ["union"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libffi = "5.1.0"

inkwell = { version = "0.8.0", features = ["llvm21-1"], optional = true } # set LLVM_SYS_181_PREFIX to a only static installation to make it build statically
human-panic = {version = "2.0.3", optional = true }
rustyline = {version = "17.0.2", optional = true }
stacker = { version = "0.1.21", optional = true }
petgraph = { version = "0.8.3", optional = true }
dirs = { version = "6.0.0", optional = true }
blake3 = { version = "1.8.2", optional = true }


[profile.release]
lto = "fat"
panic = "abort"
#strip = "debuginfo"
debug = "full"

# TODO : add some features to default features (or even remove them after enabling them by default)

[features]
native = ["dep:inkwell"]
cache = ["native", "dep:dirs", "dep:blake3"]
debug-llvm = ["native"]
repl = ["dep:rustyline"]
human-panic = ["dep:human-panic"]
gc-test-print = []
gc-test-collect = []
stack-expand = ["dep:stacker"]
stack-expand-test-print = ["stack-expand"]
dot-format = ["dep:petgraph"]
jit = ["native"]
build-bdwgc = ["native"]
musl = ["native"]
